Revision history for Perl module AppConfig

1.67 2015-01-18 NEILB
    - Version bumped for a non-developer release, now I've sorted all
      the pod issues.

1.66_03 2015-01-16 NEILB
    - More pod & whitespace cleanup

1.66_02 2015-01-15 NEILB
    - Getting pod fails from CPAN Testers for various recent versions
      of Perl. There was an empty =item.

1.66_01 2015-01-10 NEILB
    - First dev release, to check that everything's ok.
    - ABW granted co-maint, so I could set up a github repo and do a
      release with it linked. Thanks to ABW, ADAMK, and MST.

#========================================================================
# Version 1.66  Date: 2007/07/06 (Andy Wardley)
#========================================================================

* Removed File::HomeDir from the test scripts.

#========================================================================
# Version 1.65  Date: 2007/05/30 (Andy Wardley)
#========================================================================

* Changed meaning of '~' interpolation to mean $ENV{HOME} rather than
  $ENV{HOME} or wherever File::HomeDir thinks your home directory is.
  This allows us to remove the dependency on File::HomeDir which was 
  causing insallation problems (particularly on Mac OSX), and led to 
  a long dependency chain for AppConfig and other modules that rely on
  it (like Template Toolkit).

#========================================================================
# Version 1.64  Date: 2007/01/02 (Adam Kennedy)
#========================================================================

* Bug fix to prevent crashing for users with no home directory

* Increase File::HomeDir dep to 0.61 which supports no home directory
  cases properly.

#========================================================================
# Version 1.63  Date: 2006/08/03 (Adam Kennedy)
#========================================================================

* Unified version numbers and removed repository magic
